lab1/Test/L1-A-5-55.cmm
float oM ( ) {
  float hxoTk5ryoUTyG [ 624649047 ] [ 706607710 ] 
    = ! l_UJnsEvmXpqwL7xap1d = eQ1PR5 ;
  if ( ! Ddf6ESqM8AL7j4v4gJyR = NoqGLFbOFQ8vtA )   MRv_QEImKmM7DMwitm98 
    ;
else   if ( PysaBSU_3SKxzd22WzoF )   if ( IajVHi ) 
      cUGUEIGUHwUQ0m ;



  if ( K9Z27J964qOL )   xWsb2ciF ;
else   if ( tvuW )   if ( LSQYYlx )   p ;



  if ( sCJH )   NhFKbi8FFzVaI9iV ;
else   HhGSE46QGx6bNmT ;

:}
float lqSSxzne6N ( ) {
  ( ! _ / Eg4AFw / zf6ZamChRGUKCwMXeWi * B25PevTkyPqGz4ZBCaW 
    * XmTN7qOg * zmv && QclqDJy19lzgid6g && aXE && yYKi9O07h_Mlt45u 
    && vuVcbl_2Cebd1CVCx || LVaF ) ~* EJSAZ3tpkO_BSL * 
    szrQL * W2ArxNtdVIWBjolMJ + HQNFXDwXGqDo3oocig + lnklkhHnbR 
    + pXj_1cf6QTNWcl5 == gQTiwIk02QvjK99vc4m9 <= KNCf5 
    == G06w2 || G1eHvIGs4 || t22gsxs_bVA || jDhf3 ;
  kUsnK0G ( CHmAuaWE0GCFoHQD ) + NgbrQK2Lt4k + Jl4ShZYvk2X8PT 
    >= bKKM5UdMl == <= cNmVg64gqxhB0Y8 >= zLUMwlERE ;
}
